# sable

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: optuna_ma_walkforward.py
src/strategy_backtester/: __init__.py  cli.py
src/strategy_backtester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/strategy_backtester/backtest/: costs.py  engine.py  execution.py  metrics.py
src/strategy_backtester/indicators/: moving_average.py
src/strategy_backtester/portfolio/: constraints.py  monte_carlo.py  optimization.py  risk_models.py
src/strategy_backtester/research/: bootstrap.py  factors.py  ic.py  regime.py  sharpe.py  splits.py
src/strategy_backtester/strategies/: ma_crossover.py  mean_reversion.py  momentum.py
src/strategy_backtester/utils/: config.py  plotting.py  report.py  risk.py
tests/: test_imports.py
